--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/themes": "^3.1.6",
-    "@uploadthing/react": "^7.1.2",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-table": "^8.20.6",
+    "@uploadthing/react": "^7.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^2.7.3",
     "livekit-server-sdk": "^2.9.3",
@@ -26,13 +29,15 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "sonner": "^1.7.0",
     "string-to-color": "^2.2.2",
     "svix": "^1.43.0",
     "tailwind-merge": "^2.5.5",
     "uploadthing": "^7.4.0",
     "usehooks-ts": "^3.1.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
