--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-table": "^8.20.6",
     "@uploadthing/react": "^7.1.3",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -27,9 +28,11 @@
     "livekit-server-sdk": "^2.9.3",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.9.0",
     "sonner": "^1.7.0",
     "string-to-color": "^2.2.2",
     "svix": "^1.43.0",
@@ -43,11 +46,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-select": "^5.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4"
   }
 }
