--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-table": "^8.20.6",
     "@uploadthing/react": "^7.1.3",
     "axios": "^1.7.9",
@@ -35,6 +36,7 @@
     "react-select": "^5.9.0",
     "sonner": "^1.7.0",
     "string-to-color": "^2.2.2",
+    "stripe": "^17.5.0",
     "svix": "^1.43.0",
     "tailwind-merge": "^2.5.5",
     "uploadthing": "^7.4.0",
