--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@livekit/components-react": "^2.6.9",
     "@livekit/components-styles": "^1.1.4",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.5.0",
@@ -30,6 +33,7 @@
     "livekit-server-sdk": "^2.9.3",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
+    "nodemailer": "^6.9.16",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-select": "^5.0.0",
