--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.5.0",
     "@stripe/stripe-js": "^5.4.0",
     "@tanstack/react-table": "^8.20.6",
     "@uploadthing/react": "^7.1.3",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,7 +46,7 @@
     "string-to-color": "^2.2.2",
     "stripe": "^17.5.0",
     "svix": "^1.43.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "uploadthing": "^7.4.0",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.3",
