--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "string-to-color": "^2.2.2",
     "stripe": "^17.5.0",
     "svix": "^1.43.0",
+    "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "uploadthing": "^7.4.0",
     "usehooks-ts": "^3.1.0",
